ECA-2590: Only publish revoked certificates to external VA DB
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/branches/Branch_4_0/ejbca@14091 37aeb1de-b14b-0410-9a0e-82b28170d228